--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -648,10 +648,11 @@ html[dir="rtl"] .custom-icon-list li:before{
   content: "";
   position: absolute;
   background-image: var(--preloader-icon);
-  background-size: 800px;
+  background-size: contain;
+  background-repeat: no-repeat;
   background-position: center;
-  width: 300px;
-  height: 300px;
+  width: 200px;
+  height: 200px;
   left: 50%;
   top: 50%;
   transform: translate(-50%,-50%) scale(2);
@@ -785,6 +786,10 @@ html[dir="rtl"] .campaign-visual-floating-logo{
     width: 100%;
     height: 100%;
     top: 0;left: 0;
+  }
+  .preloader:before{
+    width: 150px;
+    height: 150px;
   }
 }
 @media all and (min-width: 992px) {
