Recent edits with preloader update and patient brochure

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -50,7 +50,7 @@
   --causes-rounded-main-bg:url('../img/banners/causes-section.png');
   --surgical-rounded-main-bg:url('../img/banners/surgical-section.png');
   --preloader-icon-old:url('../img/logo/preloader-animate.svg');
-  --preloader-icon:url('../img/logo/preloader.gif?v=1.2');
+  --preloader-icon:url('../img/logo/preloader-v2.gif?v=1.4');
   --swiper-navigation-size: 30px;
   --swiper-theme-color: var(--theme-secondary-color);
   --bs-body-color: var(--theme-primary-color);
